// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreboardRow Renders a heading when week is in the set 1`] = `
<table
  className="table table-condensed table-bordered table-hover submissionCenterStats"
>
  <thead>
    <tr>
      <th
        rowSpan="2"
      >
         
      </th>
      <th
        className="dayHead currentWeek"
        colSpan="2"
      >
        Feb 24, 2017
      </th>
      <th
        className="dayHead"
        colSpan="2"
      >
        Mar 3, 2017
      </th>
      <th
        className="dayHead"
        colSpan="2"
      >
        Mar 10, 2017
      </th>
      <th
        colSpan="2"
      />
    </tr>
    <tr>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th>
        %
      </th>
      <th>
        Pts
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        CAP
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        95
        %
      </td>
      <td>
        6
      </td>
    </tr>
    <tr>
      <th>
        CPC
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        125
        %
      </td>
      <td>
        4
      </td>
    </tr>
    <tr>
      <th>
        T1X
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        0
        %
      </td>
      <td>
        0
      </td>
    </tr>
    <tr>
      <th>
        T2X
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        0
        %
      </td>
      <td>
        0
      </td>
    </tr>
    <tr>
      <th>
        GITW
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        76
        %
      </td>
      <td>
        1
      </td>
    </tr>
    <tr>
      <th>
        LF
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        24
        %
      </td>
      <td>
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <th
        colSpan={7}
      >
        Marginally Effective
      </th>
      <th
        className="pct"
      >
        49
        %
      </th>
      <th>
        11
      </th>
    </tr>
  </tfoot>
</table>
`;

exports[`ScoreboardRow Renders no heading when week is out 1`] = `
<table
  className="table table-condensed table-bordered table-hover submissionCenterStats"
>
  <thead>
    <tr>
      <th
        rowSpan="2"
      >
         
      </th>
      <th
        className="dayHead"
        colSpan="2"
      >
        Feb 24, 2017
      </th>
      <th
        className="dayHead"
        colSpan="2"
      >
        Mar 3, 2017
      </th>
      <th
        className="dayHead"
        colSpan="2"
      >
        Mar 10, 2017
      </th>
      <th
        colSpan="2"
      />
    </tr>
    <tr>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th
        className="info"
      >
        P
      </th>
      <th
        className=""
      >
        A
      </th>
      <th>
        %
      </th>
      <th>
        Pts
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th>
        CAP
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cap.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        95
        %
      </td>
      <td>
        6
      </td>
    </tr>
    <tr>
      <th>
        CPC
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.cpc.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        125
        %
      </td>
      <td>
        4
      </td>
    </tr>
    <tr>
      <th>
        T1X
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t1x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        0
        %
      </td>
      <td>
        0
      </td>
    </tr>
    <tr>
      <th>
        T2X
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.t2x.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        0
        %
      </td>
      <td>
        0
      </td>
    </tr>
    <tr>
      <th>
        GITW
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.gitw.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        76
        %
      </td>
      <td>
        1
      </td>
    </tr>
    <tr>
      <th>
        LF
      </th>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="info"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.promise"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="actual"
      >
        <input
          className="testing-control  "
          name="undefined.games.lf.actual"
          type="text"
          value={undefined}
        />
      </td>
      <td
        className="pct"
      >
        24
        %
      </td>
      <td>
        0
      </td>
    </tr>
  </tbody>
  <tfoot>
    <tr>
      <th
        colSpan={7}
      >
        Marginally Effective
      </th>
      <th
        className="pct"
      >
        49
        %
      </th>
      <th>
        11
      </th>
    </tr>
  </tfoot>
</table>
`;

exports[`SubmissionScoreboard Should Render As Snapshot 1`] = `
<form
  onReset={[Function]}
  onSubmit={[Function]}
>
  <h3>
    Scoreboard
  </h3>
  <div
    style={
      Object {
        "maxHeight": "14em",
        "overflow": "scroll",
      }
    }
  />
  <div>
    <div
      className="row"
    >
      <div
        className="col-lg-12"
      >
        <table
          className="table table-condensed table-bordered table-hover submissionCenterStats"
        >
          <thead>
            <tr>
              <th
                rowSpan="2"
              >
                 
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Feb 24, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Mar 3, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Mar 10, 2017
              </th>
              <th
                colSpan="2"
              />
            </tr>
            <tr>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th>
                %
              </th>
              <th>
                Pts
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                CAP
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.cap.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.cap.actual"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.cap.promise"
                  type="text"
                  value={6}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.cap.actual"
                  type="text"
                  value={6}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.cap.promise"
                  type="text"
                  value={19}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.cap.actual"
                  type="text"
                  value={18}
                />
              </td>
              <td
                className="pct"
              >
                95
                %
              </td>
              <td>
                6
              </td>
            </tr>
            <tr>
              <th>
                CPC
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.cpc.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.cpc.actual"
                  type="text"
                  value={-4}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.cpc.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.cpc.actual"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.cpc.promise"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.cpc.actual"
                  type="text"
                  value={5}
                />
              </td>
              <td
                className="pct"
              >
                125
                %
              </td>
              <td>
                4
              </td>
            </tr>
            <tr>
              <th>
                T1X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.t1x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.t1x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.t1x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="pct"
              >
                0
                %
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                T2X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.t2x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.t2x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.t2x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.t2x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.t2x.promise"
                  type="text"
                  value={1}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.t2x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="pct"
              >
                0
                %
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                GITW
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.gitw.actual"
                  type="text"
                  value={70}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.gitw.actual"
                  type="text"
                  value={78}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.gitw.actual"
                  type="text"
                  value={57}
                />
              </td>
              <td
                className="pct"
              >
                76
                %
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <th>
                LF
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.lf.promise"
                  type="text"
                  value={5}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[0].games.lf.actual"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.lf.promise"
                  type="text"
                  value={12}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[1].games.lf.actual"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.lf.promise"
                  type="text"
                  value={25}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[2].games.lf.actual"
                  type="text"
                  value={6}
                />
              </td>
              <td
                className="pct"
              >
                24
                %
              </td>
              <td>
                0
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <th
                colSpan={7}
              >
                Marginally Effective
              </th>
              <th
                className="pct"
              >
                49
                %
              </th>
              <th>
                11
              </th>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-12"
      >
        <table
          className="table table-condensed table-bordered table-hover submissionCenterStats"
        >
          <thead>
            <tr>
              <th
                rowSpan="2"
              >
                 
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Mar 17, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Mar 24, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Mar 31, 2017
              </th>
              <th
                className="dayHead currentWeek"
                colSpan="2"
              >
                Apr 7, 2017
              </th>
              <th
                colSpan="2"
              />
            </tr>
            <tr>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th>
                %
              </th>
              <th>
                Pts
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                CAP
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.cap.promise"
                  type="text"
                  value={26}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.cap.actual"
                  type="text"
                  value={22}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.cap.promise"
                  type="text"
                  value={33}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.cap.actual"
                  type="text"
                  value={24}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.cap.promise"
                  type="text"
                  value={39}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.cap.actual"
                  type="text"
                  value={26}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.cap.promise"
                  type="text"
                  value={52}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.cap.actual"
                  type="text"
                  value={43}
                />
              </td>
              <td
                className="pct"
              >
                83
                %
              </td>
              <td>
                4
              </td>
            </tr>
            <tr>
              <th>
                CPC
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.cpc.promise"
                  type="text"
                  value={5}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.cpc.actual"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.cpc.promise"
                  type="text"
                  value={6}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.cpc.actual"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.cpc.promise"
                  type="text"
                  value={7}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.cpc.actual"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.cpc.promise"
                  type="text"
                  value={44}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.cpc.actual"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="pct"
              >
                77
                %
              </td>
              <td>
                1
              </td>
            </tr>
            <tr>
              <th>
                T1X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.t1x.promise"
                  type="text"
                  value={5}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.t1x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.t1x.actual"
                  type="text"
                  value={-1}
                />
              </td>
              <td
                className="pct"
              >
                0
                %
              </td>
              <td>
                0
              </td>
            </tr>
            <tr>
              <th>
                T2X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.t2x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.t2x.actual"
                  type="text"
                  value={0}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.t2x.actual"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.t2x.actual"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="pct"
              >
                100
                %
              </td>
              <td>
                4
              </td>
            </tr>
            <tr>
              <th>
                GITW
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.gitw.actual"
                  type="text"
                  value={81}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.gitw.actual"
                  type="text"
                  value={69}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.gitw.actual"
                  type="text"
                  value={83}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.gitw.actual"
                  type="text"
                  value={71}
                />
              </td>
              <td
                className="pct"
              >
                95
                %
              </td>
              <td>
                3
              </td>
            </tr>
            <tr>
              <th>
                LF
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.lf.promise"
                  type="text"
                  value={30}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[3].games.lf.actual"
                  type="text"
                  value={9}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.lf.promise"
                  type="text"
                  value={35}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[4].games.lf.actual"
                  type="text"
                  value={11}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.lf.promise"
                  type="text"
                  value={40}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[5].games.lf.actual"
                  type="text"
                  value={18}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.lf.promise"
                  type="text"
                  value={53}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[6].games.lf.actual"
                  type="text"
                  value={20}
                />
              </td>
              <td
                className="pct"
              >
                38
                %
              </td>
              <td>
                0
              </td>
            </tr>
          </tbody>
          <tfoot>
            <tr>
              <th
                colSpan={9}
              >
                Marginally Effective
              </th>
              <th
                className="pct"
              >
                66
                %
              </th>
              <th>
                12
              </th>
            </tr>
          </tfoot>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-12"
      >
        <table
          className="table table-condensed table-bordered table-hover submissionCenterStats"
        >
          <thead>
            <tr>
              <th
                rowSpan="2"
              >
                 
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Apr 14, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Apr 21, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Apr 28, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                May 5, 2017
              </th>
              <th
                colSpan="2"
              />
            </tr>
            <tr>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th>
                %
              </th>
              <th>
                Pts
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                CAP
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.cap.promise"
                  type="text"
                  value={49}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.cap.promise"
                  type="text"
                  value={49}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.cap.promise"
                  type="text"
                  value={55}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.cap.promise"
                  type="text"
                  value={61}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                CPC
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.cpc.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.cpc.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.cpc.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.cpc.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                T1X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                T2X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.t2x.promise"
                  type="text"
                  value={2}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.t2x.promise"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.t2x.promise"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                GITW
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                LF
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.lf.promise"
                  type="text"
                  value={22}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[7].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.lf.promise"
                  type="text"
                  value={26}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[8].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.lf.promise"
                  type="text"
                  value={30}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[9].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.lf.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[10].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
          </tbody>
          <tfoot>
            <tr />
          </tfoot>
        </table>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-lg-12"
      >
        <table
          className="table table-condensed table-bordered table-hover submissionCenterStats"
        >
          <thead>
            <tr>
              <th
                rowSpan="2"
              >
                 
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                May 12, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                May 19, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                May 26, 2017
              </th>
              <th
                className="dayHead"
                colSpan="2"
              >
                Jun 2, 2017
              </th>
              <th
                colSpan="2"
              />
            </tr>
            <tr>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th
                className="info"
              >
                P
              </th>
              <th
                className=""
              >
                A
              </th>
              <th>
                %
              </th>
              <th>
                Pts
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <th>
                CAP
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.cap.promise"
                  type="text"
                  value={67}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.cap.promise"
                  type="text"
                  value={74}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.cap.actual"
                  type="text"
                  value=""
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.cap.promise"
                  type="text"
                  value={84}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.cap.promise"
                  type="text"
                  value={86}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.cap.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                CPC
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.cpc.promise"
                  type="text"
                  value={34}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.cpc.promise"
                  type="text"
                  value={35}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.cpc.actual"
                  type="text"
                  value=""
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.cpc.promise"
                  type="text"
                  value={35}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.cpc.promise"
                  type="text"
                  value={35}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.cpc.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                T1X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.t1x.promise"
                  type="text"
                  value={8}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.t1x.promise"
                  type="text"
                  value={10}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.t1x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                T2X
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.t2x.promise"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.t2x.promise"
                  type="text"
                  value={3}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.t2x.promise"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.t2x.promise"
                  type="text"
                  value={4}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.t2x.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                GITW
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.gitw.promise"
                  type="text"
                  value={75}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.gitw.promise"
                  type="text"
                  value={88}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.gitw.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
            <tr>
              <th>
                LF
              </th>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.lf.promise"
                  type="text"
                  value={38}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[11].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.lf.promise"
                  type="text"
                  value={45}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[12].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.lf.promise"
                  type="text"
                  value={47}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[13].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td
                className="info"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.lf.promise"
                  type="text"
                  value={50}
                />
              </td>
              <td
                className="actual"
              >
                <input
                  className="testing-control  "
                  name="submission.scoreboard.scoreboards[14].games.lf.actual"
                  type="text"
                  value={null}
                />
              </td>
              <td />
              <td />
            </tr>
          </tbody>
          <tfoot>
            <tr />
          </tfoot>
        </table>
      </div>
    </div>
  </div>
  <div
    className="form-group"
  >
    <div
      className="col-sm-12"
    >
      <button
        className="btn btn-primary"
        onClick={[Function]}
      >
        Save
      </button>
    </div>
  </div>
</form>
`;
